# ferret-engine

./: Cargo.toml  index.html
assets/shaders/: pbr.wgsl  sprite.wgsl
examples/: sandbox.rs
src/: application.rs  component.rs  ecs.rs  input.rs  lib.rs  prelude.rs  timer.rs  transform.rs
src/renderer/: camera.rs  mod.rs  pipelines.rs  shaders.rs  sprite.rs  vertex.rs
