[package]
name = "ferret-engine"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.98"
env_logger = "0.11.8"
log = "0.4.27"
pollster = { version = "0.4.0", features = ["macro"] }
wasm-bindgen-futures = "0.4.50"
wgpu = "25.0.2"
winit = "0.30.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0.0"
wasm-bindgen = "0.2.100"
