[package]
name = "ferret-engine"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.98"
anymap = "0.12.1"
bytemuck = { version = "1.23.1", features = ["derive"] }
env_logger = "0.11.8"
glam = { version = "0.30.4", features = ["bytemuck"] }
hecs = "0.10.5"
log = "0.4.27"
pollster = { version = "0.4.0", features = ["macro"] }
resource = "0.6.0"
wasm-bindgen-futures = "0.4.50"
web-time = "1.1.0"
wgpu = "25.0.2"
winit = "0.30.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0.0"
wasm-bindgen = "0.2.100"
web-sys = "0.3.77"
